src/app/auth/account-info/account-info.component.scss
.preview {
  text-align: right;

  img {
    width: 40px;

    cursor: pointer;

    border-radius: 50%;
  }
}

md-card {
  position: absolute;
  top: 55px;
  right: 20px;

  width: 250px;

  text-align: left;

  img {
    width: 52px;
    height: 52px;

    border-radius: 50%;
  }
}

md-card-actions {
  text-align: right;
}

